# pigy-genetics

./: .gitignore  ReadMe.md  build-documentation.sh  cabal.project  hie.yaml  ipfs-script-noop.sh  ipfs-script.sh  mainnet.pigy-genetics  pigy-genetics.cabal  pigy.cabal  publish.sh  shell.nix  testnet.pigy-genetics
app/: Main.hs
app/Pigy/: Chain.hs  Image.hs  Ipfs.hs  Types.hs
app/Pigy/Chain/: Mint.hs  Types.hs
app/Pigy/Image/: Drawing.hs  Test.hs  Types.hs  V0.hs  V1.hs
docs/: Main.html  Pigy-Chain-Mint.html  Pigy-Chain-Types.html  Pigy-Chain.html  Pigy-Image-Drawing.html  Pigy-Image-Test.html  Pigy-Image-Types.html  Pigy-Image-V0.html  Pigy-Image-V1.html  Pigy-Image.html  Pigy-Ipfs.html  Pigy-Types.html  doc-index.html  doc-index.json  index.html  pigy-genetics.haddock
docs/src/: Main.html  Pigy.Chain.Mint.html  Pigy.Chain.Types.html  Pigy.Chain.html  Pigy.Image.Drawing.html  Pigy.Image.Test.html  Pigy.Image.Types.html  Pigy.Image.V0.html  Pigy.Image.V1.html  Pigy.Image.html  Pigy.Ipfs.html  Pigy.Types.html
pages/: example-genetics.dot  family-tree.awk  family-tree.dot  family-tree.tsv  index.html  view.css
redirect/: index.html
