cabal-version: >= 1.10

name              : pigy-genetics
description       : Service for PIGY token genetics.
version           : 0.1.6.1
license           : MIT
license-file      : LICENSE
author            : Brian W Bush
maintainer        : code@functionally.io
category          : Network
build-type        : Simple

executable pigy-genetics
  main-is         : Main.hs
  other-modules   : Pigy.Chain
                    Pigy.Chain.Mint
                    Pigy.Chain.Types
                    Pigy.Image
                    Pigy.Image.Drawing
                    Pigy.Image.Test
                    Pigy.Image.Types
                    Pigy.Image.V0
                    Pigy.Image.V1
                    Pigy.Ipfs
                    Pigy.Types
  build-depends   : base >= 4.14 && < 4.15
                  , base58-bytestring
                  , binary
                  , bytestring
                  , cardano-api
                  , colour
                  , containers
                  , data-default
                  , filepath
                  , JuicyPixels
                  , lens
                  , mantis
                  , mtl
                  , ouroboros-network
                  , random
                  , Rasterific
                  , shake
                  , text
  hs-source-dirs  : app
  default-language: Haskell2010
  ghc-options     : -Wall
